--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,65 +6,79 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: trojan
-    server: xibaozi.19890604.day
-    port: 10845
+    server: cn22.firewoodzz.com
+    port: 35008
     udp: true
-    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: 7c266797-c2f6-43cf-8cdb-3e3a8e67de8b
+    sni: updates.sub-nthu.com
     skip-cert-verify: true
     network: tcp
   - &id002
-    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10846
-    udp: true
-    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10838
-    udp: true
-    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10837
-    udp: true
-    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
-    sni: cloudflare.node-ssl.cdn-alibaba.com
-    skip-cert-verify: true
-    network: tcp
-  - &id005
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 35.87.209.22
-    port: 13489
+    server: www.coldstone.club
+    port: 8080
     cipher: auto
-    uuid: 61761e55-dff5-4f94-f75f-b0a4718bba98
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
-  - &id006
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.coldstone.club
+  - &id003
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: www.crispyrainbow.biz
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id004
+    name: 🇺🇦_UA_乌克兰
+    type: vmess
+    server: 185.158.211.186
+    port: 80
+    cipher: auto
+    uuid: b82493e3-07b4-4cf2-b585-965575cfeb32
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@forwardv2ray
+      headers:
+        host: softiri.serveirc.com
+  - &id005
+    name: 🇨🇳_CN_中国
     type: ss
     server: service.ouluyun9803.com
     port: 21003
     password: cfa17a0d-5e7d-4871-976e-f116e0818123
     cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10848
+    udp: true
+    password: 3e5d1046-5807-4b79-8397-31a006f546d1
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
   - &id007
-    name: 🇩🇪_DE_德国
+    name: 🇩🇪_DE_德国_1
     type: trojan
     server: 5.104.108.109
     port: 443
@@ -74,7 +88,47 @@ proxies:
     skip-cert-verify: true
     network: tcp
   - &id008
-    name: 🇬🇮_GI_直布罗陀
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: 56e1f11c-1217-46ab-b127-6afbc23bafba
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 172.67.217.144
+    port: 80
+    cipher: auto
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lv1.xv2ray.net
+  - &id010
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: 104.31.16.104
+    port: 8080
+    cipher: auto
+    uuid: 3a6752b4-8353-4172-85b1-32202116714d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: asan3.azad1.tech
+  - &id011
+    name: 🇬🇮_GI_直布罗陀_1
     type: vmess
     server: 95.164.8.106
     port: 80
@@ -88,20 +142,146 @@ proxies:
       path: /vmess
       headers:
         host: ee2-vmess.sshmax.xyz
-  - &id009
-    name: 🇳🇱_NL_荷兰_1
+  - &id012
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: 103.214.68.57
+    port: 10003
+    udp: true
+    password: 6x8HcghsjS
+    sni: yes998.chickenkiller.com
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 91.242.229.77
+    server: 94.131.10.135
     port: 80
     cipher: auto
-    uuid: 56890326-df58-432d-be1e-67064e2b4355
+    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: pt2-vmess.sshmax.xyz
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id014
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 91.242.229.69
+    port: 2086
+    cipher: auto
+    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /vmess
-  - &id010
+      headers:
+        host: nl1.xv2ray.net
+  - &id015
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: pt2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: pt2-vmess.sshmax.xyz
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: pt2-vmess.sshmax.xyz
+  - &id016
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.17.184.241
+    port: 2095
+    cipher: auto
+    uuid: 0f42a063-315b-4524-8501-469c51838bb6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgone_cdn.yunjisuan.cf
+  - &id017
+    name: 🇮🇶_IQ_伊拉克->🇹🇷_TR_土耳其
+    type: vmess
+    server: 130.193.166.2
+    port: 443
+    cipher: auto
+    uuid: 7682b778-b64b-408b-8fb2-61d7c7fc43e5
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@forwardv2ray
+      headers:
+        host: soft8989.redirectme.net
+  - &id018
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 35.181.194.132
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇬🇮_GI_直布罗陀_2
+    type: vmess
+    server: ee2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: c1ebe8c7-bdd9-4aca-a2f7-01bea79279b3
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee2-vmess.sshmax.xyz
+  - &id020
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id021
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 158.101.7.8
+    port: 80
+    cipher: auto
+    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: 158.101.7.8
+    network: ws
+    ws-opts:
+      path: /
+  - &id022
     name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
     server: s1c.v2.v001sss.xyz
@@ -116,174 +296,14 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id011
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 94.131.13.110
-    port: 80
-    cipher: auto
-    uuid: d3e40d59-b53c-4f4e-8867-bb598be864d2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: lt1-vmess.sshmax.xyz
-  - &id012
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 104.18.15.149
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tr3.889611.com
-  - &id013
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 162.159.200.6
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id014
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.apple.com
-  - &id015
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 104.18.15.150
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id016
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 162.159.200.7
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.visaapp.top
-  - &id017
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 162.159.200.5
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id018
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: yhnsb3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: yhnsb3.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id020
-    name: 🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 91.242.229.69
-    port: 2086
-    cipher: auto
-    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: nl1.xv2ray.net
-  - &id021
-    name: 🇰🇷_KR_韩国
+  - &id023
+    name: 🇮🇪_IE_爱尔兰
     type: trojan
-    server: 103.214.68.57
-    port: 10003
+    server: 52.214.208.44
+    port: 22222
     udp: true
-    password: 6x8HcghsjS
-    sni: yes998.chickenkiller.com
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: xibaozi.19890604.day
-    port: 10850
-    udp: true
-    password: 1fe65af9-6677-4a4d-8427-a5f9b0bae94e
-    sni: cloudflare.node-ssl.cdn-alibaba.com
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -334,6 +354,7 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -361,6 +382,7 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -386,6 +408,7 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
